# scrap_auto

./: .gitignore  README.md  manufaturers.txt  pyproject.toml
.claude/: settings.local.json
.github/: README.md  copilot-instructions.md  parts-catalog-integration.md
.github/ai/: parts-catalog-api-decisions.md  parts-catalog-db-audit.md
.github/prompts/: 01_discovery.prompt.md  02_extraction_quality.prompt.md  03_scale_run.prompt.md
deploy/: 01_server_setup.sh  02_postgres_setup.sh  DEPLOY.md  nginx_autoparts.conf  scrap-auto-api.service  scrap-auto-crawl.service  scrap-auto-crawl.timer
docs/: ARTICLE_SEARCH_QUERIES.md  CRAWL_ROUNDS_PROCESS.md  DATA_QUALITY_CHECK.md  SCRAPING_PLAN.md  The real scraping steps.md  article_details_row.html  articles.html  categoty_group_poructs.html
scripts/: chunk_convert_from_storagebox.py
src/car_parts_api/: __init__.py  config.py  database.py  deps.py  main.py
src/car_parts_api/routers/: articles.py  sync.py
src/car_parts_api/schemas/: articles.py  common.py  sync.py
src/scrap_auto/: __init__.py  api.py  checkpoint.py  cli.py  crawler.py  fetcher.py  loader.py  parser.py  settings.py  storage.py  url_patterns.py
src/scrap_auto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_car_parts_api.py
