[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrap-auto"
version = "0.1.0"
description = "Structured crawler for auto parts catalog website"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Scrap Auto Team" }]
dependencies = [
  "httpx[http2]>=0.27.0",
  "selectolax>=0.3.24",
  "typer>=0.12.3",
  "pydantic>=2.8.2",
  "tenacity>=8.5.0",
  "orjson>=3.10.6",
  "rich>=13.7.1",
  "aiosqlite>=0.21.0",
  "polars>=1.0.0",
  "duckdb>=1.1.0",
  "psycopg[binary]>=3.2"
]

[project.optional-dependencies]
api = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "asyncpg>=0.29"
]
car-parts-api = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "asyncpg>=0.29",
  "pydantic-settings>=2.0"
]

[project.scripts]
scrap-auto = "scrap_auto.cli:app"
car-parts-api = "car_parts_api.main:run"

[tool.setuptools.packages.find]
where = ["src"]
